--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>名東区温泉</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/top.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="header-right">
+          <a href="top.html">トップ</a>
+          <a href="introduce.html">温泉一覧</a>
+          <a href="contact.html">お問合せ</a>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+    <div class="main-visual">
+      <h1>名東区近辺の温泉紹介します！</h1>
+    </div>
+    <div class="main">
+      <div class="container">
+        
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-right">
+          &copy; 2022 Masuda
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </body>
 
+</html>
