--- a/introduce.html
+++ b/introduce.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>名東区温泉</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/introduce.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="header-right">
+          <a href="top.html">トップ</a>
+          <a href="introduce.html">温泉一覧</a>
+          <a href="contact.html">お問合せ</a>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+    <div class="facility">
+      <h1>名東区近辺の温泉一覧</h1>
+       <ol>
+         <li><a href="#RAKU SPA">RAKU SPA GARDEN 名古屋(名東区)</a></li>
+         <li><a href="#喜多の湯">香流温泉 喜多の湯（守山区）</a></li>
+         <li><a href="#竜泉寺の湯">天空スパヒルズ 竜泉寺の湯（守山区）</a></li>
+         <li><a href="#花しょうぶ">名東温泉 花しょうぶ（長久手市）</a></li>
+         <li><a href="#ござらっせ">長久手温泉ござらっせ（長久手市）</a></li>
+       </ol>
 
+      <h2 class="info">温泉の詳細情報</h2>
+
+      <div class="detailA">
+        <h3 id="RAKU SPA">1.RAKU SPA GARDEN 名古屋(名東区)</h3>
+         <p>花見でも有名な平和公園のすぐそばにあり、緑豊かな立地で落ち着ける天然温泉。
+           コミックが<strong>４万冊</strong>以上あり、岩盤浴を利用すれば読み放題。温泉のみ安価で楽しめる
+           ９０分コースがある。
+         </p>
+         <a href="https://rakuspa.com/nagoya/" target="_blank">RAKU SPA GARDEN</a>
+        </div>
+
+      <div class="detailB">
+        <h3 id="喜多の湯">2.香流温泉 喜多の湯（守山区）</h3>
+         <p>お風呂は、炭酸泉や<strong>水素風呂</strong>などバラエティ豊富な浴槽・サウナが楽しめます。
+          また「岩盤浴」が充実。5つの岩盤房と休憩スペースが時間無制限で利用できます。休憩スペースでは、漫画・雑誌が読み放題なので、1日自分のペースで汗をかくことができます。
+        </p>
+        <a href="http://super-sentou.com/kanare/" target="_blank">香流温泉 喜多の湯</a>
+      </div>
+
+      <div class="detailC">
+        <h3 id="竜泉寺の湯">3.天空スパヒルズ 竜泉寺の湯（守山区）</h3>
+        <p>最大の特徴は高台の眺望を生かした、温浴施設として名古屋初の浴槽から見下ろせる<strong>展望露天風呂</strong>で眼下に庄内川が流れ、夜には夜景を望むことができます。岩盤浴を含む大人の癒し空間「forest villa」はゴージャスなロッジ風で200席のリビングエリアに、書籍・雑誌・コミックを1万冊以上ある。</p>
+        <a href="https://www.ryusenjinoyu.com/moriyama/" target="_blank">天空スパヒルズ 竜泉寺の湯</a>
+      </div>
+
+      <div class="detailD">
+        <h3 id="花しょうぶ">4.名東温泉 花しょうぶ（長久手市）</h3>
+        <p>保湿性や浸透性、保温性が高いといわれる<strong>「ナノ水」</strong>を導入しました。 炭酸泉の効果がより一層高まり、お肌はしっとり、浴後のポカポカ感が強くなります。 浴室ばかりではなく、飲み水や調理にも使っています。 ぜひあなたも「ナノ水」をご体感下さい。</p>
+        <a href="https://hanashobu.com/meitou/" target="_blank">名東温泉 花しょうぶ</a>
+      </div>
+
+      <div class="detailE">
+        <h3 id="ござらっせ">5.長久手温泉ござらっせ（長久手市）</h3>
+        <p>長久手は昔から水の質がよいことで知られていました。ござらっせでは岩盤の下まで<strong>1,800m</strong>を探り、豊富な温泉を掘り当てました。無色透明・無臭の温泉水は、さらりとした肌触りで、どなたにもゆっくり楽しんでいただける泉質です。</p>
+        <a href="http://www.nagakuteonsen.jp/" target="_blank">長久手温泉ござらっせ</a>
+      </div>
+
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-right">
+          &copy; 2022 Masuda
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </body>
+</html>
