--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>名東区温泉</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/contact.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="container">
+        <div class="header-right">
+          <a href="top.html">トップ</a>
+          <a href="introduce.html">温泉一覧</a>
+          <a href="contact.html">お問合せ</a>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+    <div class="contact">
+      <div class="container">
+        <h2 class="contact-title">お問合せ</h2>
+        <form class="contact-form">
+          <h3>氏名</h3>
+          <input type="text">
+          <h3>メールアドレス</h3>
+          <input type="email">
+          <h3>感想</h3>
+          <textarea rows="4"></textarea>
+          <br>
+          <input type="submit" class="submit-button">
+        </form>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-right">
+          &copy; 2022 Masuda
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </body>
+</html>
