--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>名東区温泉</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
+    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/contact.css">
   </head>
   <body>
     <div class="header">
