--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>名東区温泉</title>
     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css">
+    <style>
+      
+    </syle>
   </head>
   <body>
     <div class="header">
