--- a/index.html
+++ b/index.html
@@ -7,7 +7,64 @@
     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css">
     <style>
       
-    </syle>
+      .header {
+        height: 56px;
+        width: 100%;
+        box-shadow: 0 0 10px #dddddd;
+        background-color:white;
+        position: fixed;
+        top: 0;
+      }
+      .header-right {
+        float: right;
+      }
+      .clear{
+        clear:both;
+      }
+      .header-right a {
+        line-height: 56px;
+        color: #5a5c5f;
+        margin-left: 5px;
+        font-size: 16px;
+        padding: 16px 5px;
+      }
+      .header-right a:hover{
+        background-color: #e2f1ff;
+        transition: background-color 0.5s;
+      }
+      .container {
+        padding: 0 30px;
+        margin-right: auto;
+      }
+      .main-visual {
+        padding-top: 140px;
+        padding-bottom: 550px;
+        margin-bottom: 50px;
+        background-image: url("https://nowrevolution.github.io/wwww/../images/money.jpg");
+        background-size: cover;
+        color: #f5f5f5;
+        text-align: center;
+      }
+      .main-visual h1 {
+        font-size: 55px;
+        margin-bottom: 5px;
+      }
+      .main{
+        padding:0ch 80px 0;
+        color: #5a5c5f;
+        text-align: center;
+      }
+      .footer {
+        height: 100px;
+        background-color: #2f3a44;
+        color: #e8e8e8;
+        padding-top: 20px;
+      }
+      .footer-right {
+        float: right;
+        padding-top: 50px;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
