--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>名東区温泉</title>
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css">
+<!--     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
+    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css"> -->
     
-      
+     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div class="header">
