--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
 <!--     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css"> -->
     
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <style>
+      .header {
+      height: 56px;
+      width: 100%;
+      box-shadow: 0 0 10px #dddddd;
+      background-color:white;
+      position: fixed;
+      top: 0;
+      }
+      .header-right {
+      float: right;
+      }
+      .clear{
+      clear:both;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
