--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/top.css"> -->
     
     <style>
+      * {
+      margin:0;
+      padding:0;
+      }
       .header {
       height: 56px;
       width: 100%;
