--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
       top: 0;
       }
       .header-right {
+        float: right;
+      }
+      .clear{
+        clear:both;
+      }
+      .header-right a {
+      line-height: 56px;
+      color: #5a5c5f;
+      margin-left: 5px;
+      font-size: 16px;
+      padding: 16px 5px;
+      }
+      .header-right a:hover{
+        background-color: #e2f1ff;
+        transition: background-color 0.5s;
+      }
+      .footer {
+        height: 100px;
+        background-color: #2f3a44;
+        color: #e8e8e8;
+        padding-top: 20px;
+      }
+      .footer-right {
+        float: right;
+        padding-top: 50px;
+      }
+      .header {
+      height: 56px;
+      width: 100%;
+      box-shadow: 0 0 10px #dddddd;
+      background-color:white;
+      position: fixed;
+      top: 0;
+      }
+      .header-right {
       float: right;
       }
       .clear{
