--- a/introduce.html
+++ b/introduce.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>名東区温泉</title>
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/introduce.css">
+<!--     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
+    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/introduce.css"> -->
+    <style>
+      
+    </style>
   </head>
   <body>
     <div class="header">
