--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,71 @@
   <head>
     <meta charset="utf-8">
     <title>名東区温泉</title>
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
-    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/contact.css">
+<!--     <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/common.css">
+    <link rel="stylesheet" href="https://nowrevolution.github.io/wwww/css/contact.css"> -->
+    <style>
+      * {
+      margin:0;
+      padding:0;
+      }
+      .header {
+        height: 56px;
+        width: 100%;
+        box-shadow: 0 0 10px #dddddd;
+        background-color:white;
+        position: fixed;
+        top: 0;
+      }
+      .header-right {
+        float: right;
+      }
+      .clear{
+        clear:both;
+      }
+      .header-right a {
+        line-height: 56px;
+        color: #5a5c5f;
+        margin-left: 5px;
+        font-size: 16px;
+        padding: 16px 5px;
+      }
+      .header-right a:hover{
+        background-color: #e2f1ff;
+        transition: background-color 0.5s;
+      }
+      .footer {
+        height: 100px;
+        background-color: #2f3a44;
+        color: #e8e8e8;
+        padding-top: 20px;
+      }
+      .footer-right {
+        float: right;
+        padding-top: 50px;
+      }
+      .contact {
+      padding: 90px 0 60px;
+      color: #5a5c5f;
+      }
+      .contact-title {
+        margin-bottom: 15px;
+      }
+      .contact-form h3 {
+        margin-top: 20px;
+        margin-bottom: 5px;
+        color: #4c4e52;
+      }
+      input, textarea {
+        font-size: 15px;
+        width: 400px;
+        padding: 2px 4px;
+      }
+      .submit-button {
+        margin-top: 20px;
+        font-size: 18px;
+        width: 80px;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
