--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     </div>
     <div class="main-visual">
       <h1>名東区近辺の温泉紹介します！</h1>
+      <img src="money.jpg" alt="温泉" >
     </div>
     <div class="main">
       <div class="container">
