--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
       float: right;
       padding-top: 50px;
       }
+      .img{
+      background-image: url(money.jpg);
+      background-position: center;
+      background-size: cover;
+      width: 100%;
+      height: 100vh;
     </style>
   </head>
   <body>
@@ -119,7 +125,7 @@
     </div>
     <div class="main-visual">
       <h1>名東区近辺の温泉紹介します！</h1>
-      <img src="money.jpg" alt="温泉" width="100%" height="100vh">
+<!--       <img src="money.jpg" alt="温泉" width="100%" height="100vh"> -->
     </div>
     <div class="main">
       <div class="container">
