--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
       background-size: cover;
       color: #f5f5f5;
       text-align: center;
+      width: 100%;
+      height: 100vh;
       }
       .main-visual h1 {
       font-size: 55px;
