--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       padding-top: 140px;
       padding-bottom: 550px;
       margin-bottom: 50px;
-      background-image: url("../images/money.jpg");
+/*       background-image: url("../images/money.jpg"); */
       background-size: cover;
       color: #f5f5f5;
       text-align: center;
